--- a/frontend/archives.html
+++ b/frontend/archives.html
@@ -74,19 +74,34 @@
                     </div>
                     <div>
                         <span class="text-xl font-bold text-gray-900">Candidapp</span>
-                        <span class="text-xs text-gray-500 block">Espace Enseignant</span>
+                        <span class="text-xs text-primary-600 block font-medium">Espace Enseignant</span>
                     </div>
                 </a>
 
                 <!-- Navigation -->
-                <div class="flex items-center space-x-6">
-                    <a href="/enseignant/dashboard" class="text-gray-600 hover:text-gray-900 transition">Dashboard</a>
-                    <a href="/enseignant/referentiel" class="text-gray-600 hover:text-gray-900 transition">Référentiel
-                        Légal</a>
+                <div class="hidden md:flex items-center space-x-6">
+                    <a href="/enseignant/dashboard" class="text-gray-600 hover:text-primary-600 transition">Dashboard</a>
+                    <a href="/enseignant/referentiel" class="text-gray-600 hover:text-primary-600 transition">Référentiel Légal</a>
                     <a href="/enseignant/archives"
                         class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Archives</a>
+                </div>
+
+                <!-- User Menu -->
+                <div class="flex items-center space-x-4">
+                    <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                        <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+                            <span id="userInitial" class="text-white font-semibold text-sm"></span>
+                        </div>
+                        <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
+                    </div>
                     <button id="logoutBtn"
-                        class="text-red-600 hover:text-red-800 font-medium transition">Déconnexion</button>
+                        class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                        </svg>
+                        <span class="hidden sm:inline">Déconnexion</span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -184,6 +199,13 @@
         </div>
 
     </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
+            <p>&copy; 2026 Candidapp. Tous droits réservés.</p>
+        </div>
+    </footer>
 
     <script>
         let allArchives = [];
@@ -333,6 +355,26 @@
             alert(message);
             showEmptyState();
         }
+
+        // ==================== AUTH ====================
+        function initAuth() {
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (!user || user.role !== 'ENSEIGNANT') {
+                window.location.href = '/login';
+                return;
+            }
+            const initial = (user.email || '?').charAt(0).toUpperCase();
+            document.getElementById('userInitial').textContent = initial;
+            document.getElementById('userEmailBadge').textContent = user.email;
+            document.getElementById('userBadge').classList.remove('hidden');
+        }
+
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            sessionStorage.removeItem('user');
+            window.location.href = '/login';
+        });
+
+        initAuth();
     </script>
 
 </body>
