--- a/frontend/login.html
+++ b/frontend/login.html
@@ -175,8 +175,25 @@
         }
 
         sessionStorage.setItem('user', JSON.stringify(data.user));
+
         // Redirection conditionnelle selon le rôle
-        window.location.href = data.redirectUrl || '/profile';
+        let redirectUrl = '/profile';
+        switch (data.user.role) {
+          case 'ENSEIGNANT':
+            redirectUrl = '/enseignant/dashboard';
+            break;
+          case 'SECRETAIRE':
+            redirectUrl = '/secretaire/dashboard';
+            break;
+          case 'ENTREPRISE':
+            redirectUrl = '/dashboard/entreprise';
+            break;
+          case 'ETUDIANT':
+          default:
+            redirectUrl = '/profile';
+            break;
+        }
+        window.location.href = data.redirectUrl || redirectUrl;
       } catch (err) {
         errorEl.textContent = 'Erreur de connexion au serveur';
         errorEl.classList.remove('hidden');
@@ -184,6 +201,25 @@
         submitBtn.textContent = 'Se connecter';
       }
     });
+
+    // Vérifier si l'utilisateur est déjà connecté
+    const existingUser = JSON.parse(sessionStorage.getItem('user') || 'null');
+    if (existingUser) {
+      switch (existingUser.role) {
+        case 'ENSEIGNANT':
+          window.location.href = '/enseignant/dashboard';
+          break;
+        case 'SECRETAIRE':
+          window.location.href = '/secretaire/dashboard';
+          break;
+        case 'ENTREPRISE':
+          window.location.href = '/dashboard/entreprise';
+          break;
+        default:
+          window.location.href = '/profile';
+          break;
+      }
+    }
   </script>
 </body>
 
