--- a/frontend/candidatures.html
+++ b/frontend/candidatures.html
@@ -62,13 +62,28 @@
                 </a>
 
                 <!-- Navigation -->
-                <div class="flex items-center space-x-6">
-                    <a href="/" class="text-gray-600 hover:text-gray-900 transition">Accueil</a>
-                    <a href="/profile" class="text-gray-600 hover:text-gray-900 transition">Mon profil</a>
-                    <a href="/offres" class="text-gray-600 hover:text-gray-900 transition">Offres</a>
-                    <a href="/candidatures"
-                        class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Mes
-                        candidatures</a>
+                <div class="hidden md:flex items-center space-x-6">
+                    <a href="/" class="text-gray-600 hover:text-primary-600 transition">Accueil</a>
+                    <a href="/profile" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
+                    <a href="/offres" class="text-gray-600 hover:text-primary-600 transition">Offres</a>
+                    <a href="/candidatures" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Mes candidatures</a>
+                </div>
+
+                <!-- User Menu -->
+                <div class="flex items-center space-x-4">
+                    <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                        <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+                            <span id="userInitial" class="text-white font-semibold text-sm"></span>
+                        </div>
+                        <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
+                    </div>
+                    <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                        </svg>
+                        <span class="hidden sm:inline">Déconnexion</span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -137,11 +152,27 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-6 mt-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
-            <p>&copy; 2025 Candidapp. Tous droits réservés.</p>
+            <p>&copy; 2026 Candidapp. Tous droits réservés.</p>
         </div>
     </footer>
 
     <script>
+        // Gestion de l'authentification
+        function initAuth() {
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (user) {
+                const initial = (user.email || '?').charAt(0).toUpperCase();
+                document.getElementById('userInitial').textContent = initial;
+                document.getElementById('userEmailBadge').textContent = user.email;
+                document.getElementById('userBadge').classList.remove('hidden');
+            }
+        }
+
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            sessionStorage.removeItem('user');
+            window.location.href = '/login';
+        });
+
         // Fonction pour formater les dates
         function formatDate(dateString) {
             const date = new Date(dateString);
@@ -390,6 +421,7 @@
 
         // Charger les candidatures au chargement de la page
         loadCandidatures();
+        initAuth();
     </script>
 
 </body>
