--- a/frontend/dashboard_entreprise.html
+++ b/frontend/dashboard_entreprise.html
@@ -58,21 +58,37 @@
                     </div>
                     <div>
                         <span class="text-xl font-bold text-gray-900">Candidapp</span>
-                        <span class="text-xs text-gray-500 block">Espace Recruteur</span>
+                        <span class="text-xs text-primary-600 block font-medium">Espace Recruteur</span>
                     </div>
                 </a>
 
-                <div class="flex items-center space-x-6">
+                <div class="hidden md:flex items-center space-x-6">
                     <a href="/dashboard/entreprise"
                         class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Dashboard</a>
-                    <a href="/create-offre" class="text-gray-600 hover:text-gray-900 transition flex items-center">
+                    <a href="/create-offre" class="text-gray-600 hover:text-primary-600 transition flex items-center">
                         <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                         </svg>
                         Publier une offre
                     </a>
+                </div>
+
+                <!-- User Menu -->
+                <div class="flex items-center space-x-4">
+                    <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                        <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+                            <span id="userInitial" class="text-white font-semibold text-sm"></span>
+                        </div>
+                        <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
+                    </div>
                     <button id="logoutBtn"
-                        class="text-red-600 hover:text-red-800 font-medium transition">Déconnexion</button>
+                        class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                        </svg>
+                        <span class="hidden sm:inline">Déconnexion</span>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -169,11 +185,28 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
+            <p>&copy; 2026 Candidapp. Tous droits réservés.</p>
+        </div>
+    </footer>
+
     <script>
+        // ==================== AUTH ====================
         const user = JSON.parse(sessionStorage.getItem("user") || "null");
-        if (!user || !user.id) window.location.href = "/login";
+        if (!user || !user.id || user.role !== 'ENTREPRISE') {
+            window.location.href = "/login";
+        }
         const userId = user.id;
-        
+
+        function initAuth() {
+            const initial = (user.email || '?').charAt(0).toUpperCase();
+            document.getElementById('userInitial').textContent = initial;
+            document.getElementById('userEmailBadge').textContent = user.email;
+            document.getElementById('userBadge').classList.remove('hidden');
+        }
+
         // ==================== LOAD STATS ====================
         async function loadStats() {
             try {
@@ -332,11 +365,12 @@
         }
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
-            if (confirm('Se déconnecter ?')) window.location.href = '/login';
+            sessionStorage.removeItem('user');
+            window.location.href = '/login';
         });
 
         // ==================== INIT ====================
-        // Décommenter quand le backend est prêt
+        initAuth();
         loadStats();
         loadOffres();
     </script>
