--- a/frontend/offre-details.html
+++ b/frontend/offre-details.html
@@ -73,41 +73,48 @@
 
 <body class="bg-gray-50 min-h-screen">
 
-    <!-- Header / Navigation -->
-    <header class="gradient-bg text-white shadow-lg sticky top-0 z-50">
-        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
-                <!-- Logo -->
-                <div class="flex items-center space-x-3">
-                    <div class="w-10 h-10 bg-white/20 backdrop-blur rounded-lg flex items-center justify-center">
-                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                        </svg>
-                    </div>
-                    <span class="text-xl font-bold">Candidapp</span>
+    <!-- Header -->
+<header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16">
+            <!-- Logo -->
+            <a href="/" class="flex items-center space-x-2">
+                <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                    </svg>
                 </div>
+                <span class="text-xl font-bold text-gray-900">Candidapp</span>
+            </a>
 
-                <!-- Navigation Links -->
-                <div class="hidden md:flex items-center space-x-6">
-                    <a href="/" class="text-white/80 hover:text-white transition">Accueil</a>
-                    <a href="/profile" class="text-white/80 hover:text-white transition">Mon profil</a>
-                    <a href="/offres" class="text-white font-semibold border-b-2 border-white pb-1">Offres</a>
-                </div>
-
-                <!-- User Profile -->
-                <div class="flex items-center space-x-3">
-                    <div class="w-8 h-8 bg-white/20 backdrop-blur rounded-full flex items-center justify-center">
-                        <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                        </svg>
-                    </div>
-                    <span class="hidden sm:inline text-sm font-medium">Étudiant</span>
-                </div>
+            <!-- Navigation Links -->
+            <div class="hidden md:flex items-center space-x-6">
+                <a href="/" class="text-gray-600 hover:text-primary-600 transition">Accueil</a>
+                <a href="/profile" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
+                <a href="/offres" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Offres</a>
+                <a href="/candidatures" class="text-gray-600 hover:text-primary-600 transition">Mes candidatures</a>
             </div>
-        </nav>
-    </header>
+
+            <!-- User Menu -->
+            <div class="flex items-center space-x-4">
+                <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                    <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+                        <span id="userInitial" class="text-white font-semibold text-sm"></span>
+                    </div>
+                    <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
+                </div>
+                <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                    </svg>
+                    <span class="hidden sm:inline">Déconnexion</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+</header>
 
     <!-- Loading State -->
     <div id="loadingState" class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8 py-12 text-center">
@@ -287,7 +294,30 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
+            <p>&copy; 2026 Candidapp. Tous droits réservés.</p>
+        </div>
+    </footer>
+
     <script>
+        // Gestion de l'authentification
+        function initAuth() {
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (user) {
+                const initial = (user.email || '?').charAt(0).toUpperCase();
+                document.getElementById('userInitial').textContent = initial;
+                document.getElementById('userEmailBadge').textContent = user.email;
+                document.getElementById('userBadge').classList.remove('hidden');
+            }
+        }
+
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            sessionStorage.removeItem('user');
+            window.location.href = '/login';
+        });
+
         // Fonction pour formater les dates
         function formatDate(dateString) {
             const date = new Date(dateString);
@@ -514,6 +544,7 @@
 
         // Charger les détails au chargement de la page
         loadOffreDetails();
+        initAuth();
     </script>
 
 </body>
