--- a/frontend/offres.html
+++ b/frontend/offres.html
@@ -75,47 +75,70 @@
 
 <body class="bg-gray-50 min-h-screen">
 
-    <!-- Header / Navigation -->
-    <header class="gradient-bg text-white shadow-lg sticky top-0 z-50">
-        <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16">
-                <!-- Logo -->
-                <div class="flex items-center space-x-3">
-                    <div class="w-10 h-10 bg-white/20 backdrop-blur rounded-lg flex items-center justify-center">
-                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                        </svg>
-                    </div>
-                    <span class="text-xl font-bold">Candidapp</span>
+    <!-- Header -->
+<header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16">
+            <!-- Logo -->
+            <a href="/" class="flex items-center space-x-2">
+                <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
+                    <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                    </svg>
                 </div>
+                <span class="text-xl font-bold text-gray-900">Candidapp</span>
+            </a>
 
-                <!-- Navigation Links -->
-                <div class="hidden md:flex items-center space-x-6">
-                    <a href="/" class="text-white/80 hover:text-white transition">Accueil</a>
-                    <a href="/profile" class="text-white/80 hover:text-white transition">Mon profil</a>
-                    <a href="/offres" class="text-white font-semibold border-b-2 border-white pb-1">Offres</a>
-                    <div class="flex items-center space-x-3">
-                        <div class="w-8 h-8 bg-white/20 backdrop-blur rounded-full flex items-center justify-center">
-                            <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                            </svg>
-                        </div>
-                        <span class="hidden sm:inline text-sm font-medium">Étudiant</span>
+            <!-- Navigation Links -->
+            <div class="hidden md:flex items-center space-x-6">
+                <a href="/" class="text-gray-600 hover:text-primary-600 transition">Accueil</a>
+                <a href="/profile" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
+                <a href="/offres" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1">Offres</a>
+                <a href="/candidatures" class="text-gray-600 hover:text-primary-600 transition">Mes candidatures</a>
+            </div>
+
+            <!-- User Menu -->
+            <div class="flex items-center space-x-4">
+                <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
+                    <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
+                        <span id="userInitial" class="text-white font-semibold text-sm"></span>
                     </div>
+                    <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
                 </div>
-        </nav>
-    </header>
+                <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
+                    </svg>
+                    <span class="hidden sm:inline">Déconnexion</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+</header>
+
+<!-- Page Header -->
+<section class="gradient-bg text-white py-12">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex items-center space-x-4">
+            <div class="w-14 h-14 bg-white/20 backdrop-blur-sm rounded-xl flex items-center justify-center">
+                <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+                </svg>
+            </div>
+            <div>
+                <h1 class="text-3xl font-bold">Offres disponibles</h1>
+                <p class="text-purple-200 mt-1">Découvrez les opportunités de stage et d'alternance validées</p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Main Content -->
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
 
-        <!-- Page Title -->
-        <div class="mb-8">
-            <h1 class="text-3xl font-bold text-gray-900 mb-2">Consulter les offres</h1>
-            <p class="text-gray-600">Découvrez les opportunités de stage et d'alternance validées</p>
-        </div>
 
         <!-- Filters Section (Optional - can be enhanced later) -->
         <div class="bg-white rounded-xl shadow-sm p-4 mb-6">
@@ -168,7 +191,30 @@
 
     </main>
 
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white py-6 mt-12">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-400 text-sm">
+            <p>&copy; 2026 Candidapp. Tous droits réservés.</p>
+        </div>
+    </footer>
+
     <script>
+        // Gestion de l'authentification
+        function initAuth() {
+            const user = JSON.parse(sessionStorage.getItem('user') || 'null');
+            if (user) {
+                const initial = (user.email || '?').charAt(0).toUpperCase();
+                document.getElementById('userInitial').textContent = initial;
+                document.getElementById('userEmailBadge').textContent = user.email;
+                document.getElementById('userBadge').classList.remove('hidden');
+            }
+        }
+
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            sessionStorage.removeItem('user');
+            window.location.href = '/login';
+        });
+
         // Données et état
         let allOffres = [];
         let filteredOffres = [];
@@ -345,6 +391,7 @@
 
         // Charger les offres au chargement de la page
         loadOffres();
+        initAuth();
     </script>
 
 </body>
