--- a/frontend/dashboard-secretaire.html
+++ b/frontend/dashboard-secretaire.html
@@ -122,7 +122,16 @@
                         <span>Validation RC</span>
                         <span id="menuBadgeRC" class="ml-auto bg-red-500 text-white text-xs px-2 py-1 rounded-full hidden"></span>
                     </a>
-
+                    <a id="nav-profil" href="/secretaire/profil"
+                        class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4.5 20.25a7.5 7.5 0 0115 0" />
+                        </svg>
+                        <span>Mon profil</span>
+                    </a>
                 </div>
             </nav>
 
@@ -149,7 +158,7 @@
                         <p class="text-sm text-gray-500 mt-1">Vue d'ensemble des activités et tâches</p>
                     </div>
                     <div class="flex items-center space-x-4">
-                        <button
+                        <button id="btnDeclarerConges"
                             class="px-4 py-2 bg-primary-600 hover:bg-primary-700 text-white rounded-lg font-medium transition flex items-center space-x-2">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -295,7 +304,48 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- Modal Déclarer congés -->
+            <div id="modalConges" class="fixed inset-0 bg-black/40 hidden items-center justify-center z-50">
+            <div class="bg-white w-full max-w-lg rounded-2xl shadow-xl p-6">
+                <div class="flex items-center justify-between mb-4">
+                <h3 class="text-lg font-semibold text-gray-900">Déclarer un congé</h3>
+                <button id="closeModalConges" class="p-2 hover:bg-gray-100 rounded-lg">✕</button>
+                </div>
 
+                <div class="space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div>
+                    <label class="text-sm text-gray-700">Date début</label>
+                    <input id="congeDateDebut" type="date" class="mt-1 w-full border rounded-lg px-3 py-2">
+                    </div>
+                    <div>
+                    <label class="text-sm text-gray-700">Date fin</label>
+                    <input id="congeDateFin" type="date" class="mt-1 w-full border rounded-lg px-3 py-2">
+                    </div>
+                </div>
+
+                <div>
+                    <label class="text-sm text-gray-700">Remplaçant (enseignant)</label>
+                    <select id="congeRemplacant" class="mt-1 w-full border rounded-lg px-3 py-2">
+                    <option value="">Aucun</option>
+                    </select>
+                    <p class="text-xs text-gray-500 mt-1">Le remplaçant pourra utiliser les fonctions secrétaire pendant la période.</p>
+                </div>
+
+                <div>
+                    <label class="text-sm text-gray-700">Motif (optionnel)</label>
+                    <textarea id="congeMotif" rows="3" class="mt-1 w-full border rounded-lg px-3 py-2"></textarea>
+                </div>
+
+                <div id="congeMsg" class="hidden text-sm"></div>
+
+                <div class="flex justify-end gap-2 pt-2">
+                    <button id="cancelConges" class="px-4 py-2 rounded-lg border hover:bg-gray-50">Annuler</button>
+                    <button id="submitConges" class="px-4 py-2 rounded-lg bg-primary-600 text-white hover:bg-primary-700">Déclarer</button>
+                </div>
+                </div>
+            </div>
             </div>
         </main>
     </div>
@@ -557,6 +607,89 @@
         .replace(/"/g, "&quot;")
         .replace(/'/g, "&#039;");
     }
+
+    // ==================== CONGÉS : MODAL ====================
+        const modalConges = document.getElementById('modalConges');
+        const btnConges = document.getElementById('btnDeclarerConges');
+        const closeModalConges = document.getElementById('closeModalConges');
+        const cancelConges = document.getElementById('cancelConges');
+        const submitConges = document.getElementById('submitConges');
+        const congeMsg = document.getElementById('congeMsg');
+
+        function openCongesModal() {
+        modalConges.classList.remove('hidden');
+        modalConges.classList.add('flex');
+        congeMsg.classList.add('hidden');
+        loadRemplacants();
+        }
+        function closeCongesModal() {
+        modalConges.classList.add('hidden');
+        modalConges.classList.remove('flex');
+        }
+
+        btnConges?.addEventListener('click', openCongesModal);
+        closeModalConges?.addEventListener('click', closeCongesModal);
+        cancelConges?.addEventListener('click', closeCongesModal);
+
+        async function loadRemplacants() {
+        const select = document.getElementById('congeRemplacant');
+        select.innerHTML = `<option value="">Aucun</option>`;
+
+        try {
+            const r = await fetch(`/api/dashboard/secretaire/conges/remplacants?userId=${userId}`);
+            const data = await r.json();
+            if (!data.ok) return;
+
+            for (const e of data.remplacants || []) {
+            const opt = document.createElement('option');
+            opt.value = e.utilisateur_id;
+            opt.textContent = `${e.nom || 'Enseignant'} (${e.email})`;
+            select.appendChild(opt);
+            }
+        } catch (e) {
+            console.error(e);
+        }
+        }
+
+        submitConges?.addEventListener('click', async () => {
+        const dateDebut = document.getElementById('congeDateDebut').value;
+        const dateFin = document.getElementById('congeDateFin').value;
+        const remplacantUtilisateurId = document.getElementById('congeRemplacant').value || null;
+        const motif = document.getElementById('congeMotif').value || null;
+
+        congeMsg.classList.remove('hidden');
+        congeMsg.className = 'text-sm text-gray-600';
+
+        if (!dateDebut || !dateFin) {
+            congeMsg.className = 'text-sm text-red-600';
+            congeMsg.textContent = 'Veuillez saisir une date de début et une date de fin.';
+            return;
+        }
+
+        try {
+            const resp = await fetch(`/api/dashboard/secretaire/conges?userId=${userId}`, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ dateDebut, dateFin, remplacantUtilisateurId, motif })
+            });
+
+            const data = await resp.json();
+            if (!resp.ok || !data.ok) {
+            congeMsg.className = 'text-sm text-red-600';
+            congeMsg.textContent = data.error || 'Erreur lors de la déclaration du congé.';
+            return;
+            }
+
+            congeMsg.className = 'text-sm text-green-600';
+            congeMsg.textContent = `Congé déclaré (id: ${data.congeId}).`;
+
+            setTimeout(closeCongesModal, 900);
+        } catch (e) {
+            console.error(e);
+            congeMsg.className = 'text-sm text-red-600';
+            congeMsg.textContent = 'Erreur technique.';
+        }
+        });
     </script>
 
 </body>
