--- a/frontend/validation-rc.html
+++ b/frontend/validation-rc.html
@@ -66,6 +66,17 @@
           <span>Validation RC</span>
           <span id="menuBadgeRC" class="ml-auto bg-red-500 text-white text-xs px-2 py-1 rounded-full hidden"></span>
         </a>
+
+        <a id="nav-profil" href="/secretaire/profil"
+            class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4.5 20.25a7.5 7.5 0 0115 0" />
+            </svg>
+            <span>Mon profil</span>
+        </a>    
       </div>
     </nav>
 
