harmonisation UI secrétaire

--- a/frontend/validation-rc.html
+++ b/frontend/validation-rc.html
@@ -22,95 +22,121 @@
   </script>
   <style>
     .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 50%, #a855f7 100%); }
-    .card-hover { transition: transform .3s ease, box-shadow .3s ease; }
-    .card-hover:hover { transform: translateY(-3px); box-shadow: 0 10px 30px rgba(0,0,0,.1); }
+    .sidebar { width: 280px; min-height: 100vh; }
+    .menu-item { transition: all 0.2s ease; }
+    .menu-item:hover { background-color: rgba(99, 102, 241, 0.1); transform: translateX(4px); }
+    .menu-item.active { background-color: rgba(99, 102, 241, 0.15); border-left: 4px solid #4f46e5; font-weight: 600; }
   </style>
 </head>
 
-<body class="bg-gray-50 min-h-screen">
+<body class="bg-gray-50">
+<div class="flex">
 
-  <!-- Header -->
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-16">
-        <!-- Logo -->
-        <a href="/secretaire/dashboard" class="flex items-center space-x-2">
-          <div class="w-10 h-10 gradient-bg rounded-lg flex items-center justify-center">
-            <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
-            </svg>
-          </div>
-          <span class="text-xl font-bold text-gray-900">Candidapp</span>
-          <span class="hidden sm:inline-block text-xs bg-primary-100 text-primary-700 px-2 py-0.5 rounded-full font-medium">Secrétariat</span>
-        </a>
-
-        <!-- Navigation Links -->
-        <div class="hidden md:flex items-center space-x-6">
-          <a id="nav-dashboard" href="/secretaire/dashboard" class="text-gray-600 hover:text-primary-600 transition">Tableau de bord</a>
-          <a id="nav-etudiants" href="/secretaire/etudiants" class="text-gray-600 hover:text-primary-600 transition">Gestion étudiants</a>
-          <a id="nav-rc" href="/secretaire/validation-rc" class="text-primary-600 font-semibold border-b-2 border-primary-600 pb-1 flex items-center space-x-1">
-            <span>Validation RC</span>
-            <span id="menuBadgeRC" class="bg-red-500 text-white text-xs px-2 py-0.5 rounded-full hidden"></span>
-          </a>
-          <a id="nav-profil" href="/secretaire/profil" class="text-gray-600 hover:text-primary-600 transition">Mon profil</a>
+  <!-- Sidebar -->
+  <aside class="sidebar bg-white shadow-lg fixed left-0 top-0 flex flex-col">
+    <div class="p-6 border-b">
+      <div class="flex items-center space-x-3">
+        <div class="w-12 h-12 gradient-bg rounded-xl flex items-center justify-center">
+          <svg class="w-7 h-7 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+          </svg>
         </div>
-
-        <!-- User Menu -->
-        <div class="flex items-center space-x-4">
-          <div id="userBadge" class="hidden md:flex items-center space-x-2 bg-primary-50 px-3 py-1.5 rounded-full">
-            <div class="w-8 h-8 bg-primary-600 rounded-full flex items-center justify-center">
-              <span id="userInitial" class="text-white font-semibold text-sm">SC</span>
-            </div>
-            <span id="userEmailBadge" class="text-primary-700 font-medium text-sm max-w-[120px] truncate"></span>
-          </div>
-          <button id="logoutBtn" class="flex items-center space-x-2 text-gray-600 hover:text-red-600 font-medium transition">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/>
-            </svg>
-            <span class="hidden sm:inline">Déconnexion</span>
-          </button>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <!-- Page Header -->
-  <section class="gradient-bg text-white py-12">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex items-center justify-between">
-        <div class="flex items-center space-x-4">
-          <div class="w-14 h-14 bg-white/20 backdrop-blur-sm rounded-xl flex items-center justify-center">
-            <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-          </div>
-          <div>
-            <h1 class="text-3xl font-bold">Validation RC</h1>
-            <p class="text-purple-200 mt-1">Valider ou refuser les attestations déposées par les étudiants</p>
-          </div>
-        </div>
-        <div class="hidden md:block px-4 py-2 bg-white/20 backdrop-blur-sm rounded-lg">
-          <span class="text-sm">Total en attente : </span>
-          <span id="rcCount" class="font-bold">-</span>
+        <div>
+          <h1 class="text-xl font-bold text-gray-900">Candidapp</h1>
+          <p class="text-xs text-gray-500">Secrétariat</p>
         </div>
       </div>
     </div>
-  </section>
 
-  <!-- Main Content -->
-  <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-    <div class="space-y-6">
+    <nav class="flex-1 py-6">
+      <div class="px-4 space-y-2">
+        <a id="nav-dashboard" href="/secretaire/dashboard"
+           class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+          </svg>
+          <span>Tableau de bord</span>
+        </a>
+
+        <a id="nav-etudiants" href="/secretaire/etudiants"
+           class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
+          </svg>
+          <span>Gestion étudiants</span>
+        </a>
+
+        <a id="nav-rc" href="/secretaire/validation-rc"
+           class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          <span>Validation RC</span>
+          <span id="menuBadgeRC" class="ml-auto bg-red-500 text-white text-xs px-2 py-1 rounded-full hidden"></span>
+        </a>
+
+        <a id="nav-profil" href="/secretaire/profil"
+           class="menu-item flex items-center space-x-3 px-4 py-3 rounded-lg text-gray-700">
+          <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4.5 20.25a7.5 7.5 0 0115 0" />
+          </svg>
+          <span>Mon profil</span>
+        </a>
+      </div>
+    </nav>
+
+    <div class="p-4 border-t">
+      <button id="logoutBtn"
+        class="w-full flex items-center space-x-3 px-4 py-3 rounded-lg text-red-600 hover:bg-red-50 transition">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+        </svg>
+        <span>Déconnexion</span>
+      </button>
+    </div>
+  </aside>
+
+  <!-- Main -->
+  <main class="flex-1 ml-[280px]">
+
+    <!-- Header -->
+    <header class="bg-white shadow-sm sticky top-0 z-10">
+      <div class="px-8 py-4 flex items-center justify-between">
+        <div>
+          <h2 class="text-2xl font-bold text-gray-900">Validation RC</h2>
+          <p class="text-sm text-gray-500 mt-1">Valider ou refuser les attestations déposées par les étudiants</p>
+        </div>
+        <div class="flex items-center space-x-3">
+          <div class="px-3 py-2 bg-gray-100 rounded-lg text-sm text-gray-700">
+            Total en attente : <span id="rcCount" class="font-semibold">-</span>
+          </div>
+          <div class="w-10 h-10 bg-primary-600 rounded-full flex items-center justify-center">
+            <span class="text-white font-semibold">SC</span>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Content -->
+    <div class="p-8 space-y-6">
+
       <!-- Toolbar -->
       <div class="bg-white rounded-xl shadow-sm p-4 flex flex-col md:flex-row md:items-center md:justify-between gap-3">
         <div class="flex items-center gap-3">
           <input id="searchInput" type="text" placeholder="Rechercher (nom, prénom, promo...)"
-            class="w-full md:w-96 px-4 py-2 rounded-lg border border-gray-200 focus:outline-none focus:ring-2 focus:ring-primary-200" />
+                 class="w-full md:w-96 px-4 py-2 rounded-lg border border-gray-200 focus:outline-none focus:ring-2 focus:ring-primary-200" />
         </div>
+
         <div class="text-sm text-gray-500">
-          Astuce : clique sur "Valider" pour accepter l'attestation, ou "Refuser" avec un motif.
+          Astuce : clique sur “Valider” pour accepter l’attestation, ou “Refuser” avec un motif.
         </div>
       </div>
 
@@ -128,6 +154,7 @@
       </div>
     </div>
   </main>
+</div>
 
 <script>
   // ==================== SESSION ====================
@@ -136,19 +163,8 @@
   if (!user || !user.id) window.location.href = "/login.html";
   const userId = user.id;
 
-  // ==================== UI INIT ====================
-  function initUserUI() {
-    const email = user?.email || '';
-    const nom = user?.nom || '';
-    const initial = (nom[0] || email[0] || 'S').toUpperCase();
-
-    document.getElementById('userInitial').textContent = initial;
-    document.getElementById('userEmailBadge').textContent = email;
-  }
-
   // ==================== INIT ====================
   window.addEventListener("DOMContentLoaded", () => {
-    initUserUI();
     setupEventListeners();
     setActiveMenu();
     loadAttestations();
@@ -166,27 +182,8 @@
   }
 
   function setActiveMenu() {
-    const navItems = ['nav-dashboard', 'nav-etudiants', 'nav-rc', 'nav-profil'];
-    const path = window.location.pathname;
-
-    navItems.forEach(id => {
-      const el = document.getElementById(id);
-      if (!el) return;
-
-      el.classList.remove('text-primary-600', 'font-semibold', 'border-b-2', 'border-primary-600', 'pb-1');
-      el.classList.add('text-gray-600');
-    });
-
-    let activeId = 'nav-dashboard';
-    if (path.includes('/secretaire/profil')) activeId = 'nav-profil';
-    else if (path.includes('/secretaire/etudiants')) activeId = 'nav-etudiants';
-    else if (path.includes('/secretaire/validation-rc')) activeId = 'nav-rc';
-
-    const activeEl = document.getElementById(activeId);
-    if (activeEl) {
-      activeEl.classList.remove('text-gray-600');
-      activeEl.classList.add('text-primary-600', 'font-semibold', 'border-b-2', 'border-primary-600', 'pb-1');
-    }
+    ["nav-dashboard","nav-etudiants","nav-rc","nav-profil"].forEach(id => document.getElementById(id)?.classList.remove("active"));
+    document.getElementById("nav-rc")?.classList.add("active");
   }
 
   // ==================== RC : LISTE ====================
